# yesodbookjp

./: Application.hs  Foundation.hs  README.md  RawString.hs  Settings.hs  devel.hs  yesodbookjp.cabal
Handler/: Auth.hs  Conduit.hs  Introduction.hs  Layout.hs  Root.hs  Session.hs  Shakespeare.hs  Widgets.hs
config/: routes  settings.yml
deploy/: Procfile
templates/: auth.hamlet  conduit.hamlet  contents.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  description.lucius  homepage.hamlet  introduction.hamlet  session.hamlet  shakespeare.hamlet  widgets.hamlet
