name:              yesodbookjp
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            melpon
maintainer:        melpon
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://yesodbookjp.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     RawString
                     Handler.Root
                     Handler.Introduction
                     Handler.Shakespeare
                     Handler.Widgets
                     Handler.Conduit
                     Handler.Session
                     Handler.Auth

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

executable         yesodbookjp
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

    build-depends: base                          >= 4          && < 5
                 , yesod-platform                == 1.0.0
                 , hamlet                        == 1.0.1
                 , yesod-default                 == 1.0.0
                 , shakespeare-text              == 1.0.0.1
                 , shakespeare-css               == 1.0.1.1
                 , yesod-core                    == 1.0.0.2
                 , yesod-static                  == 1.0.0.1
                 , wai                           == 1.2.0.1
                 , wai-extra                     == 1.2.0.2
                 , text                          == 0.11.2.0
                 , bytestring                    == 0.9.2.1
                 , clientsession                 == 0.7.4.3
                 , transformers                  == 0.2.2.0
                 , yaml                          == 0.7.0
                 , conduit                       == 0.4.0.1
                 , blaze-builder                 == 0.3.1.0
                 , hjsmin                        == 0.0.15
                 , directory                     == 1.1.0.2
                 , warp                          == 1.2.0.1
                 , template-haskell
