name:              yesodbookjp
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            melpon
maintainer:        melpon
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://yesodbookjp.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     RawString
                     Handler.Root
                     Handler.Introduction
                     Handler.Shakespeare
                     Handler.Widgets
                     Handler.Conduit
                     Handler.Session
                     Handler.Auth

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

executable         yesodbookjp
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

    build-depends: base                          >= 4          && < 5
                 , yesod                         == 1.0.0.2
                 , hamlet
                 , yesod-default
                 , shakespeare-text
                 , shakespeare-css
                 , yesod-core
                 , yesod-static
                 , wai
                 , wai-extra
                 , text
                 , bytestring
                 , clientsession
                 , transformers
                 , yaml
                 , conduit
                 , blaze-builder
                 , hjsmin
                 , directory
                 , warp
                 , template-haskell
